--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XDG8B9FR5V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XDG8B9FR5V');
+</script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>friendly-nudge-popup</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>ClipKey</title>
+    <meta name="description" content="Smart URL Navigator for Efficient Workflows" />
+    <meta name="author" content="LifeIsBeautiful" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="ClipKey" />
+    <meta property="og:description" content="Smart URL Navigator for Efficient Workflows" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://clip-key.vercel.app/lovable-uploads/e8d2eb63-f19e-4610-a2a1-760b65a704a8.png" />
+    <meta property="og:url" content="https://clip-key.vercel.app/" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://clip-key.vercel.app/lovable-uploads/e8d2eb63-f19e-4610-a2a1-760b65a704a8.png" />
   </head>
 
   <body>
