--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ClipKey</title>
     <meta name="description" content="Smart URL Navigator for Efficient Workflows" />
-    <meta name="author" content="LifeIsBeautiful" />
+    <meta name="author" content="Juan RC Tech" />
 
     <meta property="og:title" content="ClipKey" />
     <meta property="og:description" content="Smart URL Navigator for Efficient Workflows" />
